Test/dafny0/TypeTests.dfy.expect
TypeTests.dfy(9,17): Error: type mismatch for argument 0 (function expects C, got D)
TypeTests.dfy(9,20): Error: type mismatch for argument 1 (function expects D, got C)
TypeTests.dfy(10,15): Error: type mismatch for argument 0 (function expects C, got int)
TypeTests.dfy(10,18): Error: type mismatch for argument 1 (function expects D, got int)
TypeTests.dfy(16,16): Error: incorrect type of method in-parameter (expected int, got bool)
TypeTests.dfy(16,16): Error: incorrect type of method out-parameter 1 (expected C, got int)
TypeTests.dfy(17,12): Error: incorrect type of method out-parameter 1 (expected C, got int)
TypeTests.dfy(45,6): Error: Duplicate local-variable name: z
TypeTests.dfy(47,6): Error: Duplicate local-variable name: x
TypeTests.dfy(50,8): Error: Duplicate local-variable name: x
TypeTests.dfy(53,6): Error: Duplicate local-variable name: y
TypeTests.dfy(59,11): Error: unresolved identifier: x
TypeTests.dfy(61,28): Error: unresolved identifier: z
TypeTests.dfy(62,29): Error: unresolved identifier: w1
TypeTests.dfy(62,47): Error: unresolved identifier: w0
TypeTests.dfy(65,28): Error: unresolved identifier: e
TypeTests.dfy(80,17): Error: object initialization must denote an initializing method or constructor (F)
TypeTests.dfy(81,17): Error: a method called as an initialization method must not have any result arguments
TypeTests.dfy(90,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(91,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(92,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(94,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(95,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(96,3): Error: cannot assign to a range of array elements (try the 'forall' statement)
TypeTests.dfy(23,9): Error: because of cyclic dependencies among constructor argument types, no instances of datatype 'NeverendingList' can be constructed
TypeTests.dfy(169,7): Error: non-ghost variable cannot be assigned a value that depends on a ghost
TypeTests.dfy(179,6): Error: cannot assign to non-ghost variable in a ghost context
TypeTests.dfy(180,9): Error: cannot assign to non-ghost variable in a ghost context
TypeTests.dfy(198,15): Error: incorrect type of datatype constructor argument (found int -> int, expected int -> Dt<int>) (covariant type parameter 1 would require int <: Dt<int>)
TypeTests.dfy(204,15): Error: incorrect type of datatype constructor argument (found Dt<?> -> Dt<?>, expected ? -> Dt<?>) (contravariance for type parameter0 expects ? <: Dt<?>)
TypeTests.dfy(211,11): Error: type mismatch for argument (function expects ?, got set<?>)
TypeTests.dfy(222,9): Error: Assignment to array element is not allowed in this context (because this is a ghost method or because the statement is guarded by a specification-only expression)
32 resolution/type errors detected in TypeTests.dfy
